--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   <![endif]-->
 </head>
 
-<body>
+<header>
+    <div class="brand">
+      <h1>Fun Bus</h1>
+    </div>
+    <div class="nav-bar">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </div>
+</header>  
 
-  
-     
-  <div class="container home">
-   
+<body>    
+  <div class="container home">   
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
