--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
 </header>  
 
 <body>    
-  <div class="container home">   
+  <div class="container home"> 
+    
+    <div class="top-page">
+      <img src="img/fun-bus.jpg" alt="Fun Bus">  
+      <div class="welcome">
+        <h1>Welcome To Fun Bus!</h1>
+        <p>Traveling expidition modern, clean webdisign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design expedition.</p>
+      </div>
+    </div>
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
