--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <header>
+  <div class="top-bar">
     <div class="brand">
       <h1>Fun Bus</h1>
     </div>
@@ -24,11 +25,12 @@
       <a href="#">Blog</a>
       <a href="#">Contact</a>
     </div>
+  </div>
 </header>  
 
 <body>    
   <div class="container home"> 
-    
+
     <div class="top-page">
       <img src="img/fun-bus.jpg" alt="Fun Bus">  
       <div class="welcome">
