--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
+
+    <form class="more-info">
+        <h3>Send Me More Info:</h3>
+        <h4>First name:</h4><br>
+        <input type="text" name="firstname"><br>
+        <h4>Last name:</h4><br>
+        <input type="text" name="lastname"><br>
+        <h4>Email:</h4><br>
+        <input type="text" name="email"><br>
+        <h4>Phone Number:</h4><br>
+        <input type="text" name="phonenumber"><br>
+        <h5>Preferred Method of Contact:</h5><br>
+        <div class="radio">
+            <input type="radio" name="preferred" value="phone"> phone<br>
+            <input type="radio" name="preferred" value="email"> email<br>
+            <input type="radio" name="preferred" value="carrier-pigeon" checked> carrier pigeon<br>
+        </div>
+        <button class="btn" type="submit" value="Submit">Submit</button>
+      </form>
+
   </div><!-- container -->
 
   <footer class="footer">
